<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewmodel"
            type="com.example.flightgearcontroller.viewmodel.FlightViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MainActivity">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="178dp"
            android:text=""
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@+id/seekBar_throttle"
            app:layout_constraintEnd_toEndOf="@+id/editText_port"
            app:layout_constraintStart_toStartOf="@+id/editText_port"
            app:layout_constraintTop_toBottomOf="@+id/editText_port" />

        <SeekBar
            android:id="@+id/seekBar_throttle"
            android:layout_width="320dp"
            android:layout_height="0dp"
            android:layout_marginBottom="155dp"
            android:max="200"
            android:progress="100"
            android:rotation="270"
            app:layout_constraintBottom_toTopOf="@+id/seekBar_rudder"
            app:layout_constraintEnd_toEndOf="@+id/throttleLabel"
            app:layout_constraintStart_toEndOf="@+id/throttleLabel"
            app:layout_constraintTop_toBottomOf="@+id/button_connect" />

        <SeekBar
            android:id="@+id/seekBar_rudder"
            android:layout_width="320dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:max="200"
            android:progress="100"
            app:layout_constraintBottom_toTopOf="@+id/rudderLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar_throttle" />

        <com.example.flightgearcontroller.view.Joystick
            android:id="@+id/joystick"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="57dp"
            android:contentDescription="@string/imageview_desc"
            app:layout_constraintBottom_toBottomOf="@+id/seekBar_rudder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/throttleLabel"
            app:layout_constraintTop_toBottomOf="@+id/button_connect" />

        <EditText
            android:id="@+id/editText_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:autofillHints="ip address"
            android:ems="10"
            android:hint="@string/textview_ip_hint"
            android:inputType="textPersonName"
            android:text="@={viewmodel.ipAddress}"
            app:layout_constraintBottom_toTopOf="@+id/editText_port"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11dp"
            android:autofillHints="port"
            android:ems="10"
            android:hint="@string/textview_port_hint"
            android:inputType="textPersonName"
            android:text="@={viewmodel.port}"
            app:layout_constraintBottom_toTopOf="@+id/button_connect"
            app:layout_constraintStart_toStartOf="@+id/editText_ip"
            app:layout_constraintTop_toBottomOf="@+id/editText_ip" />

        <TextView
            android:id="@+id/rudderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="93dp"
            android:text="@string/rudder_label"
            android:textColor="@color/blue_600"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/seekBar_rudder"
            app:layout_constraintStart_toStartOf="@+id/seekBar_rudder"
            app:layout_constraintTop_toBottomOf="@+id/seekBar_rudder" />

        <TextView
            android:id="@+id/throttleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="26dp"
            android:layout_marginRight="26dp"
            android:rotation="270"
            android:text="@string/throttle_label"
            android:textColor="@color/blue_600"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/joystick"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/seekBar_throttle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>